feat: Add ProcessInfo dictionary compatibility and cross-platform script enhancements
- Add ProcessInfo.to_dict() method for JSON serialization compatibility
- Enhance cross-platform process management with detailed process info
- Add comprehensive error handling and retry logic for database connections
- Implement Docker environment detection and automatic host/port configuration
- Add cross-platform setup scripts (PowerShell, Batch, Shell, Python)
- Improve color output handling for Windows terminal compatibility
- Add enhanced dependency validation and platform-specific installation tips
- Update configuration validation with production readiness checks
- Add comprehensive documentation and usage examples for all scripts

This commit focuses on improving system compatibility across different platforms
and deployment environments while maintaining the ProcessInfo dictionary
structure for consistent data serialization and API compatibility.

--- a/package.json
+++ b/package.json
@@ -8,21 +8,49 @@
     "services/backend"
   ],
   "scripts": {
+    "setup": "turbo run setup --filter=backend",
+    "setup:quick": "turbo run setup:quick --filter=backend",
+    "setup:dev": "turbo run setup:dev --filter=backend",
+    "setup:production": "turbo run setup:production --filter=backend",
+    "setup:validate": "turbo run setup:validate --filter=backend",
+    "setup:all": "npm run setup:backend",
+    "setup:backend": "turbo run setup --filter=backend",
     "dev": "turbo run dev",
     "dev:frontend": "turbo run dev --filter=native",
     "dev:backend": "turbo run dev --filter=backend",
     "dev:all": "turbo run dev",
     "build": "turbo run build",
-    "build:frontend": "turbo run build --filter=native",
+    "build:frontend": "turbo run build:frontend --filter=native",
+    "build:backend": "turbo run build:backend --filter=backend",
+    "build:all": "turbo run build:backend build:frontend",
+    "test": "turbo run test",
+    "test:frontend": "turbo run test:frontend --filter=native",
+    "test:backend": "turbo run test:backend --filter=backend",
+    "test:all": "turbo run test:backend test:frontend",
+    "test:watch": "turbo run test:watch --filter=backend",
+    "type-check": "turbo run type-check",
+    "type-check:backend": "turbo run type-check --filter=backend",
     "lint": "turbo run lint",
-    "lint:frontend": "turbo run lint --filter=native",
-    "lint:backend": "turbo run lint --filter=backend",
+    "lint:frontend": "turbo run lint:frontend --filter=native",
+    "lint:backend": "turbo run lint:backend --filter=backend",
+    "lint:all": "turbo run lint:backend lint:frontend",
+    "lint:fix": "turbo run lint:fix --filter=backend",
     "format": "turbo run format",
     "format:frontend": "turbo run format --filter=native",
     "format:backend": "turbo run format --filter=backend",
     "format:check": "turbo run format:check",
-    "test": "turbo run test",
+    "format:all": "turbo run format",
+    "quality": "turbo run quality --filter=backend",
+    "quality:all": "npm run lint:all && npm run type-check && npm run test:all",
     "clean": "turbo run clean",
+    "clean:cache": "turbo run clean:cache --filter=backend",
+    "install:backend": "turbo run install --filter=backend",
+    "deps:update": "turbo run deps:update --filter=backend",
+    "deps:check": "turbo run deps:check --filter=backend",
+    "deploy": "turbo run deploy:backend deploy:frontend",
+    "deploy:backend": "turbo run deploy:backend --filter=backend",
+    "deploy:frontend": "turbo run deploy:frontend --filter=native",
+    "deploy:prod": "turbo run deploy:prod --filter=backend",
     "update-ip": "turbo run update-ip --filter=backend",
     "migration:new": "turbo run migration:new --filter=backend",
     "migration:run": "turbo run migration:run --filter=backend",
@@ -34,16 +62,21 @@
     "migration:uncommit": "turbo run migration:uncommit --filter=backend",
     "db:reset": "turbo run db:reset --filter=backend",
     "db:recreate": "turbo run db:recreate --filter=backend",
+    "db:seed": "turbo run db:seed --filter=backend",
+    "docker:build": "turbo run docker:build --filter=backend",
     "docker:up": "cd services/backend && docker-compose up -d",
     "docker:down": "cd services/backend && docker-compose down",
     "docker:stop": "cd services/backend && docker-compose stop",
     "docker:restart": "cd services/backend && docker-compose restart",
     "docker:logs": "cd services/backend && docker-compose logs -f",
     "docker:ps": "cd services/backend && docker-compose ps",
-    "kill:port": "cd services/backend && python scripts/kill_port.py",
-    "kill:port:force": "cd services/backend && python scripts/kill_port.py --force",
-    "kill:all": "cd services/backend && python scripts/kill_port.py --all",
-    "kill:list": "cd services/backend && python scripts/kill_port.py --list"
+    "health:check": "turbo run health:check --filter=backend",
+    "kill:port": "turbo run kill:port --filter=backend",
+    "kill:port:force": "cd services/backend && poetry run kill-port --force",
+    "kill:all": "turbo run kill:all --filter=backend",
+    "kill:list": "turbo run kill:list --filter=backend",
+    "turbo:prune": "turbo prune --scope=backend",
+    "turbo:cache:clear": "turbo daemon clean"
   },
   "devDependencies": {
     "turbo": "^2.0.0"
