--- a/services/backend/alembic.ini
+++ b/services/backend/alembic.ini
@@ -1,6 +1,8 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql://postgres:mysecretpassword@localhost:5432/postgres
+# sqlalchemy.url is now dynamically configured in alembic/env.py from environment variables
+# This removes the security risk of hardcoded credentials in version control
+sqlalchemy.url =
 
 [loggers]
 keys = root,sqlalchemy,alembic
