--- a/services/backend/docker-compose.yml
+++ b/services/backend/docker-compose.yml
@@ -18,17 +18,45 @@ services:
     ports:
       - "${API_PORT:-9000}:9000"
     environment:
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-user}:${POSTGRES_PASSWORD:-password}@postgres:5432/${POSTGRES_DB:-safewave}
+      # Database configuration - let the application auto-detect Docker environment
+      # The config.py will automatically use postgres:5432 when running in Docker
+      - POSTGRES_DB=${POSTGRES_DB:-safewave}
+      - POSTGRES_USER=${POSTGRES_USER:-user}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-password}
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - ENVIRONMENT=${ENVIRONMENT:-development}
+      - DOCKER_CONTAINER=true
+      
+      # Security configuration
       - SECRET_KEY=${SECRET_KEY}
       - ALGORITHM=${ALGORITHM:-HS256}
-      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-15}
       - REFRESH_TOKEN_EXPIRE_DAYS=${REFRESH_TOKEN_EXPIRE_DAYS:-7}
+      
+      # API configuration
+      - DEBUG=${DEBUG:-true}
+      - API_V1_STR=${API_V1_STR:-/api/v1}
+      - PROJECT_NAME=${PROJECT_NAME:-Safe Wave API}
+      
+      # External service configuration
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - OPENROUTER_BASE_URL=${OPENROUTER_BASE_URL:-https://openrouter.ai/api/v1}
+      - OPENROUTER_MODEL=${OPENROUTER_MODEL:-meta-llama/llama-3.1-405b-instruct:free}
+      
+      # Email configuration
       - SMTP_SERVER=${SMTP_SERVER:-smtp.gmail.com}
       - SMTP_PORT=${SMTP_PORT:-587}
       - SMTP_USERNAME=${SMTP_USERNAME}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - FROM_EMAIL=${FROM_EMAIL:-noreply@safewave.com}
+      - SMTP_USE_TLS=${SMTP_USE_TLS:-true}
+      
+      # File storage configuration
+      - UPLOAD_BASE_DIR=${UPLOAD_BASE_DIR:-uploads}
+      - AUDIO_UPLOAD_DIR=${AUDIO_UPLOAD_DIR:-uploads/audio}
+      - DOCUMENT_UPLOAD_DIR=${DOCUMENT_UPLOAD_DIR:-uploads/documents}
     depends_on:
       - postgres
     volumes:
