--- a/services/backend/env.example
+++ b/services/backend/env.example
@@ -1,9 +1,9 @@
 # Database Configuration
-POSTGRES_DB=app
-POSTGRES_USER=app
-POSTGRES_PASSWORD=app
+POSTGRES_DB=safewave
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
 POSTGRES_PORT=5432
-DATABASE_URL=postgresql+psycopg://app:app@db:5432/app
+DATABASE_URL=postgresql+psycopg://user:password@localhost:5432/safewave
 
 # JWT Configuration
 SECRET_KEY=dev_secret_key_please_change_in_prod_1234567890
