--- a/services/backend/docker-compose.yml
+++ b/services/backend/docker-compose.yml
@@ -10,11 +10,10 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./uploads:/app/uploads
+      - backend-uploads:/app/uploads
       - ./models:/app/models
     depends_on:
       - db
-      - minio
     environment:
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
@@ -39,18 +38,6 @@ services:
       start_period: 5s
     restart: unless-stopped
 
-  minio:
-    image: minio/minio:latest
-    command: server /data --console-address ":9001"
-    environment:
-      - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
-      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minioadmin}
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    volumes:
-      - minio-data:/data
-
 volumes:
   db-data:
-  minio-data:
+  backend-uploads:
