--- a/services/backend/docker-compose.yml
+++ b/services/backend/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       - backend-uploads:/app/uploads
       - ./models:/app/models
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
