--- a/services/backend/Dockerfile
+++ b/services/backend/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libpq-dev \
     curl \
+    postgresql-client \
     ffmpeg \
  && rm -rf /var/lib/apt/lists/*
 
