--- a/services/backend/docker-compose.yml
+++ b/services/backend/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: safe-wave-backend:dev
     env_file:
       - .env
-    command: bash -lc "poetry run alembic upgrade head && poetry run uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+    command: bash -lc "until pg_isready -h db -p 5432 -U ${POSTGRES_USER} -q; do echo 'waiting for db'; sleep 1; done; export PGPASSWORD=${POSTGRES_PASSWORD}; DB_NAME=${POSTGRES_DB:-safewave}; psql -h db -p 5432 -U ${POSTGRES_USER} -tc \"SELECT 1 FROM pg_database WHERE datname='${DB_NAME}'\" | grep -q 1 || psql -h db -p 5432 -U ${POSTGRES_USER} -c \"CREATE DATABASE \\\"${DB_NAME}\\\"\"; unset PGPASSWORD; poetry run alembic upgrade head && poetry run uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     ports:
       - "8000:8000"
     volumes:
@@ -28,7 +28,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     healthcheck:
